# voltricx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  req.txt  sonar-project.properties
.github/workflows/: buildcheck.yml  deploy-docs.yml  publish.yml  sonar_Analysis.yml  version_checks.yml
docs/: changelog.md  index.md
docs/api-reference/: enums.md  events.md  exceptions.md  filters.md  hypercache.md  node.md  player.md  pool.md  queue.md  tracks.md  typings.md
docs/examples/: basic-bot.md  full-bot.md  slash-commands.md
docs/getting-started/: configuration.md  installation.md  lavalink-setup.md  quickstart.md
docs/guide/: autoplay.md  caching.md  errors.md  events.md  filters.md  nodes.md  playback.md  queue.md
docs/includes/: abbreviations.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
example/: main.py
tests/: conftest.py  test_backoff.py  test_coverage_final.py  test_exceptions.py  test_filters.py  test_filters_extended.py  test_hypercache.py  test_logger.py  test_node.py  test_player.py  test_player_edge.py  test_player_extended.py  test_pool.py  test_pool_edge.py  test_pool_extended.py  test_queue.py  test_queue_extended.py  test_track.py  test_utils.py  test_websocket.py
voltricx/: __init__.py  __main__.py  backoff.py  exceptions.py  filters.py  hypercache.py  logger.py  node.py  player.py  pool.py  queue.py  utils.py  websocket.py
voltricx/typings/: __init__.py  base.py  common.py  enums.py  events.py  filters.py  node.py  player.py  routeplanner.py  session.py  track.py  websocket.py
